# mcs-pms

./: .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  DESIGN_SYSTEM.md  DEVELOPER_GUIDE.md  DOCUMENTATION_COMPLETE.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_MANIFEST.txt  FEATURES.md  README.md  SECURITY.md  TROUBLESHOOTING.md  USER_GUIDE.md  eslint.config.mjs  instrumentation.ts  next.config.mjs  package-lock.json  package.json  playwright.config.ts  vercel.json
.github/: CODEOWNERS  pull_request_template.md
app/: error.tsx  global-error.tsx  globals.css  layout.tsx  manifest.ts  not-found.tsx  page.tsx
desktop/: .env.example  README.md  package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
docs/: GO-LIVE.md  README.md  guest-guide.md  manager-guide.md  owner-guide.md  realtime-setup.md  receptionist-guide.md  technician-guide.md
e2e/: auth-pages.spec.ts  pwa.spec.ts  security-headers.spec.ts
lib/: env.ts  guest-portal.ts  guest-rules-cookie.ts  guest-session.ts  mock-data.ts  navigation.ts  phone.ts  property-context.tsx  rate-limit.ts  tax.ts  validations.ts
public/: sw.js
scripts/: backfill-reservation-events.ts  check-migrations.mjs  deploy-vercel-prod.sh  generate-pwa-icons.mjs  seed.mjs  smoke-prod.mjs
supabase/: seed.sql
tests/: analytics.test.ts  billing-production.test.ts  can-edit-message.test.ts  channel-import-url.test.ts  checkout-validation.test.ts  complaint-visit.test.ts  complaint-workflow.test.ts  csp.test.ts  desktop-install.test.ts  env.test.ts  folio-rollup.test.ts  ical.test.ts  (+55 more)
(+607 files in other folders)
