[package]
name = "mojo-apartments-desktop"
version = "0.1.0"
description = "MOJO Apartments property management — desktop shell"
authors = ["MOJO Apartments"]
edition = "2021"

[lib]
name = "mojo_apartments_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true
